add error pages

--- a/omni.ini
+++ b/omni.ini
@@ -4,9 +4,16 @@ expire=900000
 verbose=no
 use_session=yes
 
+[error_pages]
+403=scripts/view/errors/403.html
+404=scripts/view/errors/404.html
+405=scripts/view/errors/405.html
+500=scripts/view/errors/500.html
+
 [app]
 name=TEAM
 install_lock=omni.lock
+enable_rename=yes
 
 [dirs]
 model=scripts/model/
