--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack-dev-server"
+    "build": "webpack"
   },
   "dependencies": {
     "antd": "^3.18.2",
@@ -22,7 +21,6 @@
     "ts-loader": "^6.0.1",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
+    "webpack-cli": "^3.3.2"
   }
 }
