--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,13 +1,16 @@
 {
     "compilerOptions": {
-        "module": "es2015",
-        "target": "es6",
+        "target": "es5",
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
         "jsx": "react",
         "noEmitOnError": true,
         "noImplicitAny": true,
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+        "lib": [
+            "dom",
+            "es2015",
+        ]
     },
     "include": [
         "src/*",
