--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,10 @@
   "devDependencies": {
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
+    "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^2.1.1",
     "style-loader": "^0.23.1",
     "ts-import-plugin": "^1.5.5",
-    "ts-loader": "^6.0.2",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
