--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "webpack"
   },
   "dependencies": {
-    "antd": "^3.18.2",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.0.8"
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
-    "awesome-typescript-loader": "^5.2.1",
+    "ts-loader": "^5.2.1",
     "css-loader": "^2.1.1",
     "style-loader": "^0.23.1",
     "ts-import-plugin": "^1.5.5",
