--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "compilerOptions": {
+        "module": "es2015",
         "target": "es6",
-        "allowJs": true,
-        "allowSyntheticDefaultImports": true,
         "jsx": "react",
         "noEmitOnError": true,
         "noImplicitAny": true,
