--- a/view/tsconfig.json
+++ b/view/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "es2015",
         "target": "es6",
         "jsx": "react",
+        "allowJs": true,
         "noEmitOnError": true,
         "noImplicitAny": true,
         "moduleResolution": "node",
